Fix hiding banner on mobile

--- a/bezier-visualizer/style.scss
+++ b/bezier-visualizer/style.scss
@@ -48,7 +48,7 @@ canvas {
 }
 
 .hidden {
-    transform: translateY(-80px)
+    transform: translateY(-100%)
 }
 
 #controls {
